# Sophon-1

./: .gitignore  Cargo.toml  check_errors.ps1  librust_out.rlib
.sisyphus/drafts/: sophon-1-analysis-v2.md  sophon-1-analysis.md  sophon-1-design-prompt-v2.md  sophon-1-design-prompt-v3.md  sophon-1-design-prompt.md
crates/sophon-accel/: Cargo.toml
crates/sophon-accel/src/: aligned.rs  detect.rs  lib.rs  mmap.rs  pack64.rs  scheduler.rs  simd.rs
crates/sophon-cli/: Cargo.toml
crates/sophon-cli/src/: main.rs
crates/sophon-config/: Cargo.toml
crates/sophon-config/src/: lib.rs
crates/sophon-core/: Cargo.toml
crates/sophon-core/src/: error.rs  hdc.rs  json.rs  lib.rs  norm.rs  ops.rs  regex.rs  rng.rs  tensor.rs
crates/sophon-data/: Cargo.toml
crates/sophon-data/src/: batcher.rs  corpus.rs  dataset.rs  filter.rs  lib.rs
crates/sophon-docs/: Cargo.toml
crates/sophon-docs/src/: html.rs  lib.rs  main.rs
crates/sophon-docs/templates/: base.html  styles.css
crates/sophon-eval/: Cargo.toml
crates/sophon-eval/src/: benchmark.rs  lib.rs  metrics.rs  task_suite.rs
crates/sophon-inference/: Cargo.toml
crates/sophon-inference/src/: belief.rs  improvement.rs  lib.rs  precision.rs  prediction.rs  update.rs
crates/sophon-integration/: Cargo.toml
crates/sophon-integration/src/: e2e.rs  lib.rs  pipeline.rs  stress.rs
crates/sophon-integration/tests/: benchmark.rs  e2e_tests.rs  fuzz_tests.rs  integration_tests.rs  property_tests.rs  regression_tests.rs  unit_tests.rs
crates/sophon-kan/: Cargo.toml
crates/sophon-kan/src/: grad.rs  layer.rs  lib.rs  lut.rs  spline.rs
crates/sophon-loss/: Cargo.toml
crates/sophon-loss/src/: ce.rs  free_energy.rs  lib.rs
crates/sophon-memory/: Cargo.toml
crates/sophon-memory/src/: episodic.rs  interoceptive.rs  lib.rs  procedural.rs  semantic.rs  working.rs
crates/sophon-model/: Cargo.toml
crates/sophon-model/src/: backward.rs  block.rs  embedding.rs  head.rs  lib.rs  lora.rs  model.rs
crates/sophon-optim/: Cargo.toml
crates/sophon-optim/src/: lib.rs  param_group.rs  tsm.rs
crates/sophon-parse/: Cargo.toml
crates/sophon-parse/src/: ast.rs  encode.rs  graph.rs  index.rs  lexer.rs  lib.rs
crates/sophon-planner/: Cargo.toml
crates/sophon-planner/src/: action_scoring.rs  dpvl.rs  gave.rs  lib.rs  rollout.rs
crates/sophon-quant/: Cargo.toml
crates/sophon-quant/src/: distill.rs  gguf.rs  lib.rs  model_io.rs  pack.rs  quant.rs  serialize.rs  ste.rs
crates/sophon-runtime/: Cargo.toml
crates/sophon-runtime/src/: action.rs  fs.rs  lib.rs  process.rs  screen.rs  sysstate.rs  system.rs
crates/sophon-safety/: Cargo.toml
crates/sophon-safety/src/: alignment.rs  error_detect.rs  lib.rs  purpose.rs
crates/sophon-ssm/: Cargo.toml
crates/sophon-ssm/src/: backward.rs  conv.rs  eviction.rs  hippo.rs  lib.rs  params.rs  selective.rs  state.rs  update.rs  zoh.rs
crates/sophon-swarm/: Cargo.toml
crates/sophon-swarm/src/: classroom.rs  lib.rs  selection.rs  student.rs  teacher.rs
crates/sophon-train/: Cargo.toml
crates/sophon-train/src/: checkpoint.rs  checkpoint_io.rs  lib.rs  state.rs  step.rs
crates/sophon-tui/: Cargo.toml
crates/sophon-tui/examples/: counter.rs  effects.rs  events.rs  memo.rs
crates/sophon-tui/src/: ansi.rs  component.rs  effect.rs  element.rs  hook.rs  input.rs  layout.rs  lib.rs  platform.rs  render.rs  renderer.rs  style.rs  terminal.rs
crates/sophon-tui/src/widgets/: chart.rs  list.rs  mod.rs  progress.rs  spinner.rs  table.rs
crates/sophon-verifier/: Cargo.toml
crates/sophon-verifier/src/: encoding.rs  knowledge.rs  lean_backend.rs  lib.rs  noisy.rs  refinement.rs  triviality.rs
