[workspace]
resolver = "2"
members = [
    "crates/sophon-config",
    "crates/sophon-core",
    "crates/sophon-kan",
    "crates/sophon-ssm",
    "crates/sophon-model",
    "crates/sophon-runtime",
    "crates/sophon-verifier",
    "crates/sophon-quant",
    "crates/sophon-optim",
    "crates/sophon-loss",
    "crates/sophon-train",
    "crates/sophon-inference",
    "crates/sophon-safety",
    "crates/sophon-swarm",
    "crates/sophon-data",
    "crates/sophon-accel",
    "crates/sophon-memory",
    "crates/sophon-planner",
    "crates/sophon-eval",
    "crates/sophon-cli",
    "crates/sophon-integration",
    "crates/sophon-tui",
    "crates/sophon-docs",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
license = "MIT"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
panic = "abort"

[profile.dev]
opt-level = 0
debug = true
