[package]
name = "sophon-docs"
version = "0.1.0"
edition = "2021"
authors = ["Sophon Contributors"]
description = "Documentation generator for Sophon AGI"
license = "MIT OR Apache-2.0"

[dependencies]
sophon-core = { path = "../sophon-core" }
sophon-tui = { path = "../sophon-tui" }

[features]
default = []
