[package]
name = "sophon-runtime"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
sophon-config = { path = "../sophon-config" }
sophon-core = { path = "../sophon-core" }

[target.'cfg(target_os = "macos")'.dependencies]
# macOS screen capture via Core Graphics FFI (no external crates needed)

[target.'cfg(target_os = "linux")'.dependencies]
# X11 screen capture via x11rb (pure Rust, no system dependencies)
x11rb = { version = "0.13", optional = true }

[features]
default = []
x11 = ["x11rb"]
